# ExpressionDB

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  run_etl.ps1  schema_base.sql  schema_extended.sql
.github/workflows/: ci.yml  pyproject.toml
data/: postgresql.conf  postmaster.opts  postmaster.pid
data/base/1/: 1247  1247_vm  1259  13460  13465_vm  13470  13474  2600  2600_fsm  2600_vm  2601_fsm  2601_vm  2602  2603  2603_fsm  2606  2608  2609_vm  2610_fsm  2612  2612_fsm  2612_vm  2616_vm  2619  2619_fsm  2619_vm  2658  2662  2666  2675  2693  2696  2704  2836  2836_fsm  2838_vm  2840  2840_fsm  2840_vm  2841  (+13 more)
data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13460  13460_fsm  13460_vm  13464  13465  13465_fsm  13465_vm  13469  13470  13470_fsm  13470_vm  13474  13475  13475_fsm  13475_vm  13479  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+205 more)
data/base/4/: 1247_fsm  1249_fsm  1249_vm  1259  13460_vm  13464  13465_fsm  13470_fsm  13470_vm  13475  13475_fsm  13479  2601  2602_vm  2603_vm  2605  2605_fsm  2605_vm  2607  2607_vm  2610  2610_vm  2615_fsm  2615_vm  2616_fsm  2617  2617_fsm  2618  2619  2619_fsm  2663  2664  2674  2678  2679  2681  2682  2685  2703  2753  (+19 more)
data/base/5/: 1249  1255  (+54 more)
data/global/: 1213  1213_fsm  1213_vm  1260  1260_fsm  1260_vm  1261  1261_fsm  1261_vm  1262  1262_fsm  1262_vm  2396  2396_fsm  2396_vm  2397  2671  2672  2676  2694  2695  6302  6303  pg_control  pg_internal.init
data/pg_stat_tmp/: pgss_query_texts.stat
